## Changes in Version 2.4.2

* Fixed bug in delete records.
* Fixed bug date handling for NA in date conversion of time_hh_mm_ss

## Changes in Version 2.4.0

* Added handlers overrides for type conversion based on REDCap field type.

## Change in Ownership 2.3.3

Transfer from Benjamin Nutter to VUMC Biostatistics. 

## Changes in Version 2.3
* Bug fix: Unmapped suffixes do not cause crashes, only warnings.

## Changes in Version 2.2
* BREAKING CHANGE: The `dev_allocate` and `prod_allocate` elements of the 
  object returned by `allocationTable` have been named `dev_allocation` and 
  `prod_allocation`, respectively.  
* Bug fix: `importRecords` now handles data with repeating forms correctly.
* New feature: UTF-8 Characters may be stripped from the data dictionary.

## Change up to Version 2.1 (2018-03-03)
* Bug fix: Add `[form]_complete` fields
* Bug fix: Include `[form]_complete` fields in Reports
* New feature: `[form]_complete` fields may be explicitly requested.
* New feature: Automatic selection of `[form]_complete` fields may be turned off.

## Changes in Version 2.0 (2017-01-18)
* redcapDbConnection methods are being deprecated.  To our knowledge, no one
  is using these methods, and we do not believe they would work as previously 
  coded anyway. The methods definitions continue to be reserved although 
  they will likely not be developed in the forseeable future (if at all).
  Please file an issue on GitHub if you feel such methods would be of use.
* `redcapProjectInfo` is being deprecated, as it will inevitably create confusion
  with the API method `exportProjectInformation`.  The replacement function is
  `exportBundle`.
* export bundles are now placed into the option `redcap_bundle` by default.
  For now, exportBundle will also return that same object.  This is to prevent
  back-compatibility problems with existing code, but will change at a future date.
* Added several new API functions.  All functions up to REDCap 6.5.0 are included.