@@ -18,11 +18,13 @@
 #'   identifier (ie, the first field in the data dictionary). By default it 
 #'   also includes any fields identified in \code{REDCAP_SYSTEM_FIELDS}, which
 #'   are fields that REDCap adds to exports to identify arms, events, etc. 
-#'   see \link{\code{constants}}.
+#'   see \code{\link{constants}}.
 #' @param exportRecordsArgs named \code{list} with arguments to pass to \code{exportRecords}. 
 #'   This allows for testing specific forms, events, and/or records. Internally, any 
 #'   setting you make for \code{factors, labels, dates, survey}, or \code{dag} 
 #'   arguments will be ignored.
+#' @param error_handling An option for how to handle errors returned by the API.
+#'   see \code{\link{redcap_error}}
 #'   
 #' @details The intention of this function is to generate a list of subject
 #'   events that are missing and could potentially be values that should have
@@ -42,25 +44,8 @@
 #'   
 #' @author Benjamin Nutter
 #' 
-# Tests to perform
-# * return an error if rcon is not a redcapConnection object
-# * return an error if excludeMissingForms is not logical
-# * return an error if excludeMissingForms is not length 1.
-# * return an error if exportRecordsArgs is not a list. 
-# * return an error if exportRecordsArgs is not a named list.
-# * return an error if fixed_fields is not a character vector
-#
-# Needs to be able to identify missing values where
-# * missing value with no branching logic
-# * missing value with branching logic from one field (non-checkbox)
-# * missing value with branching logic from a checkbox field
-# * missing value with branching logic from two fields using an AND conjunction
-# * missing value with branching logic from two fields using an OR conjuction
-# * missing value with branching logic from two fields where one is a checkbox field
-# * missing value with branching logic from three fields using both AND and OR conjunctions
-# * missing value with branching logic from a field using an inequality
-# * missing values identified when excludeMissingForms = FALSE
-
+#' @importFrom utils read.csv
+#' 
 #' @export
 
 missingSummary <- function(rcon, 
