@@ -1,5 +1,6 @@
 ## Changes in Version 2.4.2
 
+* Added a missingSummary function that deals with branching logic.
 * Fixed bug in delete records.
 * Fixed bug date handling for NA in date conversion of time_hh_mm_ss
 
